# bullseye

./: .env.docker  README.md  docker-compose.yml
backend/: .env.local  .gitignore  Cargo.toml  Dockerfile  diesel.toml  start.sh
backend/migrations/2025-04-03-084252_dummy/: down.sql  up.sql
backend/migrations/2025-04-07-055655_health_eval/: down.sql  up.sql
backend/migrations/2025-05-20-084147_new_metrics/: down.sql  up.sql
backend/migrations/2025-05-28-173815_create_db/: down.sql  up.sql
backend/src/: calculate.rs  db.rs  db_operations.rs  errors.rs  helper.rs  main.rs  metrics.rs  metrics_v2.rs  query.rs  schema.rs  services.rs  services_v2.rs
backend/src/models/: companies_model.rs  earnings_model.rs  forecast_models.rs  metrics_model.rs  mod.rs  returning_model.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: Metrics.ts  bullseyeAPI.ts  bullseyeAPIv2.ts  nominalMetrics.ts  stockData.ts  stockHealthEval.ts
frontend/src/components/: BullsEyeHome.tsx  CompanyList.tsx  EarningsWidget.tsx  MetricsPage.tsx  NominalEarningsWidget.tsx  ScreenerPage.tsx  SearchBar.tsx  SimpleCard.tsx  SingleIndicatorCard.tsx  SingleTickerPage.tsx  TickerMetricsPage.tsx  TwoIndicatorsCard.tsx  websocket.tsx
frontend/src/utils/: currency.ts
