[package]
name = "bullseye"
version = "0.1.0"
edition = "2021"

[dependencies]
bullseye-api = { path = "api/", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = [
    "postgres",
    "64-column-tables",
    "chrono",
    "r2d2",
] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
http = "1"
